# axum_starter

./: Cargo.toml
src/: main.rs
static/: index.html
