[package]
name = "axum-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
axum-macros = "0.3.8"
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
